# ipc-bench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  install-dependencies.sh  plotBenchmark.py
source/: CMakeLists.txt
source/common/: CMakeLists.txt  process.c
source/common/include/common/: utility.h
source/common/src/: process.c  signals.c  sockets.c  utility.c
source/dbus/: CMakeLists.txt  client.cc  dbus.c  dbus.cc  server.cc
source/domain/: client.c  server.c
source/eventfd/: eventfd-bi.c  eventfd-uni.c
source/fifo/: client.c  server.c
source/mmap/: client.c  server.c
source/mq/: CMakeLists.txt  client.c  mq-common.c  server.c
source/nanomsg/: CMakeLists.txt  client.c  nanomsg.c  server.c
source/nanomsg-sub/: CMakeLists.txt  client.c  nanomsg-sub.c  server.c
source/nng/: CMakeLists.txt  client.c  nng.c  server.c
source/nng-sub/: CMakeLists.txt  client.c  nng-sub.c  server.c
source/pipe/: pipe.c
source/shm/: client.c  server.c
source/shm-sync/: shm-sync-common.c
source/tcp/: client.c  server.c
source/zeromq/: CMakeLists.txt  client.c  server.c
source/zeromq-sub/: CMakeLists.txt  client.c  server.c  zeromq-sub.c
